--- a/trunk/FlickrStore/.classpath
+++ b/trunk/FlickrStore/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="lib" path="lib/xstream-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/ostermillerutils_1_05_00.jar"/>
 	<classpathentry kind="lib" path="lib/ApplicationWindow.jar"/>
-	<classpathentry kind="lib" path="lib/flickrapi-1.0a9.jar"/>
-	<classpathentry sourcepath="JRE_SRC" kind="var" path="JRE_LIB"/>
+	<classpathentry kind="lib" path="lib/flickrapi-1.0.jar"/>
+	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
