--- a/trunk/FlickrStore/.classpath
+++ b/trunk/FlickrStore/.classpath
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test/src"/>
 	<classpathentry kind="lib" path="lib/xpp3-1.1.3.4d_b4_min.jar"/>
 	<classpathentry kind="lib" path="lib/xstream-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/ostermillerutils_1_05_00.jar"/>
 	<classpathentry kind="lib" path="lib/ApplicationWindow.jar"/>
 	<classpathentry kind="lib" path="lib/flickrapi-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
