* Improved navigation styling * Additional page: overview * Improved "previewability"

--- a/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/WinkelPlanner.properties
+++ b/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/WinkelPlanner.properties
@@ -2,7 +2,8 @@
 application.legal.footer = Copyright &copy; 2010 Bert Van Vlerken Alle Rechten Voorbehouden
 application.login        = Aanmelden
 application.logout       = Afmelden
-application.nav.home     = Lijstjes
+application.nav.lists    = Lijstjes
+application.nav.overview = Overzicht
 application.nav.products = Producten
 application.nav.shops    = Winkels
 application.title        = Winkel Planner
