Working on the skeleton for WinkelPlanner. Introduced a free CSS from the web to get me going in a more or less acceptable style.

--- a/WinkelPlanner/trunk/be.witspirit.winkelplanner.web/pom.xml
+++ b/WinkelPlanner/trunk/be.witspirit.winkelplanner.web/pom.xml
@@ -70,6 +70,19 @@
   </profiles>
   
   <build>
+    <resources>
+      <resource>
+        <filtering>false</filtering>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**</include>
+        </includes>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </resource>
+    </resources>
+  
     <plugins>
       <!--
         The actual maven-gae-plugin. Type "mvn gae:run" to run project, "mvn gae:update"
